ProductのエンドポイントをRESTのルールに従うように修正
